AIOEC-1499: Fixed a couple critical layout bugs on event details page (no review required)

--- a/public/themes-ai1ec/vortex/less/event.less
+++ b/public/themes-ai1ec/vortex/less/event.less
@@ -44,9 +44,6 @@
 	}
 
 	// Categories & tags.
-	.ai1ec-categories + .ai1ec-tags {
-		margin-top: -@event-line-height * 0.4;
-	}
 	.ai1ec-category {
 		font-size: 0.8em;
 	}
